# model-service

./: .env  .gitignore  Dockerfile  README.md  model_service.py  pyproject.toml  requirements.txt  setup.py  version.py  version.txt
.github/workflows/: bump-patch.yml  release.yml  to-pre-release.yml
feedback/: feedback_dump.tsv
tests/: test_model_service.py
