[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "model-service"
dynamic = ["version"]
dependencies = [
    "nltk",
    "scikit-learn",
    "Flask>=2.2.3",
    "joblib~=1.4.2",
    "requests~=2.32.3",
    "pytest"
]

[tool.setuptools_scm]
